# learncurve

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  README  aclocal.m4  buildscript  config.h.in  configure  configure.ac  greekmounce.xml  greekmounce.xml~  learncurve.pro
m4/: aclocal.m4  qt.m4
src/: buildscript~  main.cpp  main.cpp~  makefile  makefile~
src/backend/: boxes.cpp  boxes.cpp~  boxes.h  boxes.h~  htmlgen.cpp  htmlgen.cpp~  htmlgen.h  htmlgen.h~  initialize.cpp  initialize.cpp~  initialize.h  initialize.h~  program.css  program.css~  read_vocab_file.cpp  read_vocab_file.cpp~  read_vocab_file.h  review.cpp  review.cpp~  review.h  review.h~  save_restore.cpp  save_restore.cpp~  save_restore.h  save_restore.h~  types.h  types.h~
src/gui/gtk3/: aboutdialog_gtk3.glade  callbacks.cpp  callbacks.cpp~  callbacks.h  callbacks.h~  control.cpp  control.cpp~  control.h  control.h~  main_gtk3.glade
src/gui/qt/: learncurveqt.cpp  learncurveqt.h  mainwindow.cpp  mainwindow.h
